Fix issue 117 Preview follows the crawled blog
- Not all blogs have the same amount of tabs in the settings. So the preview tab can have a different index.
- The last tab's index is determined first.

--- a/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsTumblrLikedByView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsTumblrLikedByView.xaml
@@ -146,7 +146,7 @@
                              Padding="2,0" Grid.Column="3" Grid.ColumnSpan="3" Grid.Row="6" TickPlacement="TopLeft" />
 
                 <Separator Grid.ColumnSpan="7" Grid.Row="8" Margin="0" />
-                <TabControl Grid.Column="0" Grid.ColumnSpan="6" Grid.Row="10" SelectedIndex="{Binding BlogFile.SettingsTabIndex}" Background="{StaticResource DefaultBackground}">
+                <TabControl x:Name="Tabs" Grid.Column="0" Grid.ColumnSpan="6" Grid.Row="10" SelectedIndex="{Binding BlogFile.SettingsTabIndex}" Background="{StaticResource DefaultBackground}">
                     <TabItem Header="{x:Static p:Resources.BlogSettings}">
                         <Grid Margin="0">
                             <Grid.Resources>
