Add Image Viewer with slideshow mode
- As a new feature an image viewer has been added to the blog list's context menu. It opens a form for viewing this blog's images and optionally run a slideshow. It can be used as a standalone application too.

--- a/src/TumblThree/TumblThree.Presentation/Views/ManagerView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/ManagerView.xaml
@@ -67,6 +67,8 @@
                                           Header="{x:Static p:Resources.ShowDetails}" />
                                 <MenuItem Command="{Binding ShowFilesCommand}"
                                           Header="{x:Static p:Resources.ShowFiles}" />
+                                <MenuItem Command="{Binding ViewImagesCommand}"
+                                          Header="{x:Static p:Resources.ViewImages}" />
                             </ContextMenu>
                         </Setter.Value>
                     </Setter>
