Fix Full-screen preview doesn't follow the blogs
- In the meantime the preview automatically follows the downloaded blogs. But the full-screen preview worked only for the blog for whom it was opened.
- Now the full-screen preview follows the blogs too and remembers the last shown element to prevent black screens while waiting for the next blog's element to show. The full-screen preview automatically closes after the last blog has been downloaded.

--- a/src/TumblThree/TumblThree.Presentation/Views/FullScreenMediaView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/FullScreenMediaView.xaml
@@ -40,14 +40,15 @@
                     </VisualStateGroup>
                 </VisualStateManager.VisualStateGroups>
                 <MediaElement Visibility="Collapsed" x:Name="SwitchableMediaElement"
-                                      Source="{Binding LastDownloadedVideo, Converter={StaticResource NullImageConverter}, IsAsync=True}"
-                                      Stretch="None" IsMuted="True" LoadedBehavior="Play" UnloadedBehavior="Close" />
+                                      Source="{Binding LastDownloadedVideo, Converter={StaticResource NullImageConverter}}"
+                                      Stretch="None" IsMuted="True" LoadedBehavior="Play" UnloadedBehavior="Manual" 
+                                      Unloaded="SwitchableMediaElement_Unloaded" MediaEnded="SwitchableMediaElement_MediaEnded" IsVisibleChanged="SwitchableMediaElement_IsVisibleChanged" />
                 <Image Visibility="Visible" x:Name="SwitchableImage" 
-                               Source="{Binding LastDownloadedPhoto, Converter={StaticResource NullImageConverter}, IsAsync=True}"
+                               Source="{Binding LastDownloadedPhoto, Converter={StaticResource NullImageConverter}}"
                                Stretch="Uniform" StretchDirection="DownOnly" />
                 <i:Interaction.Triggers>
-                    <ei:DataTrigger Binding="{Binding States}" Value="{Binding BlogFile.States}">
-                        <ei:GoToStateAction StateName="{Binding BlogFile.States}" />
+                    <ei:DataTrigger Binding="{Binding States}" Value="{Binding States}">
+                        <ei:GoToStateAction StateName="{Binding States}" />
                     </ei:DataTrigger>
                 </i:Interaction.Triggers>
             </Grid>
